<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <Button
        android:id="@+id/komponen1"
        android:layout_width="191dp"
        android:layout_height="50dp"
        android:text="@string/activity"
        android:textColor="#F8000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066" />

    <Button
        android:id="@+id/komponen2"
        android:layout_width="189dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:text="@string/INTENT"
        android:textColor="#F8000000"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/komponen1" />

    <Button
        android:id="@+id/komponen3"
        android:layout_width="188dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="SERVICE"
        android:textColor="#F8000000"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/komponen2" />

    <Button
        android:id="@+id/komponen4"
        android:layout_width="186dp"
        android:layout_height="54dp"
        android:layout_marginTop="24dp"
        android:text="@string/broadcast_recaiver"
        android:textColor="#F8000000"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/komponen3" />

    <Button
        android:id="@+id/komponen5"
        android:layout_width="184dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:text="@string/content_provider"
        android:textColor="#F8000000"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/komponen4" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="343dp"
        android:layout_height="41dp"
        android:layout_marginBottom="24dp"
        android:textAlignment="center"
        android:textColor="#070707"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>